changed some grammer mistake (aspire to become)

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <p class="follow-text">I am a student at UCF who recently discovered a passion for web developing
-                and I am aspiring to become a full stack engineer </p>
+                and I aspire to become a full stack engineer </p>
         </div>
 
         <div class="container">
